2008-04-21  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

Reviewed by Maciej.

        Bug 18671: SquirrelFish: continue inside switch fails
        <https://bugs.webkit.org/show_bug.cgi?id=18671>

        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::jumpContextForLabel):
        * VM/CodeGenerator.h:
        * kjs/nodes.cpp:
        (KJS::ContinueNode::emitCode):



git-svn-id: http://svn.webkit.org/repository/webkit/branches/squirrelfish@32357 268f45cc-cd09-0410-ab3c-d52691b4dbfc